# edevkit

./: .clangd  .gitignore  CHANGELOG.md  README.md
docs/: ESP32_BRIDGE.md  NRF5340_ALGORITHMS.md
firmware/oot_modules/: CMakeLists.txt
firmware/oot_modules/drivers/: Kconfig
firmware/projects/edev_dapv2/: .gitignore  CMakeLists.txt  README.md  jlink_dump_clean.hex  pico-sdk  pico_sdk_import.cmake
firmware/projects/edev_dapv2/docs/: ARCHITECTURE.md
firmware/projects/edev_dapv2/docs/learning/: 01-swd-wire-and-line-reset.md  02-debug-port.md  03-access-port.md  04-memory-access.md  05-cmsis-dap-v2.md  06-dispatcher.md  07-vendor-commands.md  08-sleepy-targets.md  09-cortex-m-debug.md  10-software-reset.md  11-rom-table.md  12-nordic-specifics.md  13-host-stack.md  14-debugging-debugger.md  15-design-lessons.md  README.md
firmware/projects/edev_dapv2/releases/: README.md  edev_dapv2_v0_1.elf  edev_dapv2_v0_1.uf2
firmware/projects/edev_dapv2/src/: main.c  tusb_config.h
firmware/projects/edev_dapv2/src/dap/: dap.c  dap.h  dap_atomic.c  dap_config.h  dap_general.c  dap_info.c  dap_internal.h  dap_jtag.c  dap_swd.c  dap_swj.c  dap_swo.c  dap_vendor.c
firmware/projects/edev_dapv2/src/hw/: chip_id.c  chip_id.h  jtag.c  jtag.h  probe.c  probe.h  probe_pins.h  swo.c  swo.h
firmware/projects/edev_dapv2/src/pio/: probe.pio  probe_keepalive.pio  probe_swd.pio  swo_uart.pio
firmware/projects/edev_dapv2/src/usb/: usb_dap_class.c  usb_dap_class.h  usb_descriptors.c  usb_descriptors.h
firmware/projects/edev_dapv2/src/util/: led.c  led.h  log.c  log.h  safety.c  safety.h
firmware/projects/edev_dapv2/tools/: nrf53_disable_approtect.s  nrf53_net_disable_approtect.s  uh_ringair162_v2013703_merged.hex  uh_ringpro351_v5241951_merged.hex  uh_ringpro351_v5242051_merged.hex
firmware/projects/edev_dapv2/tools/edevocd/: pyproject.toml  setup.cfg
firmware/projects/edev_dapv2/tools/edevocd/pyocd/: __main__.py
firmware/projects/edev_dapv2/tools/edevocd/pyocd/flash_algos/: build.sh  cortex_m_read.S  cortex_m_read.lst  cortex_m_read.py
firmware/projects/edev_dapv2/tools/edevocd/pyocd/subcommands/: _edev_helpers.py  edev_dump_cmd.py  edev_info_cmd.py  edev_mem_cmd.py  nrf_dpidr_cmd.py  nrf_recover_cmd.py  nrf_reset_cmd.py
firmware/projects/edev_dapv2/tools/web/: README.md  tester.html  tester_full.html
firmware/projects/edev_dapv2/tools/webdbg/: index.html  server.py
firmware/projects/edev_dapv2/tools/webgui/: README.md  identify.py  index.html  probers.py  pyocd_diag.py  pyocd_flash.py  pyocd_flash_worker.py  pyocd_nrf5340_fix.py  requirements.txt  server.py
firmware/projects/edev_dapv2_zephyr/: .gitignore  BRINGUP.md  CMakeLists.txt  Kconfig  NOTES.md  NRF5340_FIRMWARE_GAP.md  README.md  SMOKE_TEST_2026-06-29.md  SMOKE_TEST_LOG_2026-06-29.txt  UPSTREAM_VALIDATES.md  prj.conf
firmware/projects/edev_dapv2_zephyr/boards/: rpi_pico2_rp2350a_m33.overlay
firmware/projects/edev_dapv2_zephyr/drivers/dp/: swdp_pio_rpi_pico.c
firmware/projects/edev_dapv2_zephyr/dts/bindings/: raspberrypi,pico-swdp-pio.yaml
firmware/projects/edev_dapv2_zephyr/pio/: probe_swd.pio  probe_swd.pio.h
firmware/projects/edev_dapv2_zephyr/releases/v0.1-step5/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.1-step5/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.2-step8/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.3-step8/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.4-step8/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.5-step6/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.6-step7/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.7/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/releases/v0.1.8/: RELEASE.md
firmware/projects/edev_dapv2_zephyr/releases/v0.1.9/: RELEASE.md  SHA256SUMS
firmware/projects/edev_dapv2_zephyr/src/: main.c  msosv2.h  swclk_keepalive.c
firmware/projects/edev_dapv2_zephyr/src/nrf53/: Kconfig.nrf53  nrf53.h  nrf53_ap.c  nrf53_ctrl_ap.c  nrf53_dp.c  nrf53_flash_write.c  nrf53_nvmc.c  nrf53_priv.h  nrf53_read_mem.c  nrf53_recover.c  nrf53_stubs.c  nrf53_target_info.c  nrf53_uicr.c  nrf53_vendor.c
firmware/projects/edev_dapv2_zephyr/src/nrf53/nrf53_stubs/: net_disable_approtect.s
firmware/projects/edev_dapv2_zephyr/tools/: _flash_ops_sequence.py  _program_and_verify.py  ring_pro_351_acceptance.py  test_nrf53_vendor_cmds.py
firmware/projects/edev_dapv2_zephyr/tools/webtest/: README.md  index.html  server.py
firmware/projects/pio_sanity_zephyr/: CMakeLists.txt  Kconfig  prj.conf
firmware/projects/pio_sanity_zephyr/boards/: rpi_pico2_rp2350a_m33.overlay
firmware/projects/pio_sanity_zephyr/pio/: toggle.pio
firmware/projects/pio_sanity_zephyr/src/: main.c
firmware/zephyr-patches/: 0001-swdp_ll_pin-add-RP2040-RP2350-elif.patch  0002-swdp_ll_pin_rpi_pico-fast-SIO-bit-bang.patch  0003-cmsis_dap-weak-vendor-cmd-handler.patch  README.md  apply.sh
hardware/edevkitv1/: edevkitv1.kicad_prl  edevkitv1.kicad_pro  edevkitv1.kicad_sch
hardware/lib/: TS13-1212-73-BK-160-D--3DModel-STEP-242080.STEP
hardware/lib/COM-09032/: COM-09032.kicad_sym  XDCR_COM-09032.kicad_mod
hardware/usbkitv1/: fp-lib-table  sym-lib-table  usbkitv1-bom.csv  usbkitv1-pos.csv  usbkitv1.kicad_pcb  usbkitv1.kicad_pcb.pre-silk-labels  usbkitv1.kicad_pcb.pre-zone-fix  usbkitv1.kicad_prl  usbkitv1.kicad_pro  usbkitv1.kicad_sch
hardware/usbkitv1/gerber/: usbkitv1-B_Cu.gbl  usbkitv1-B_Mask.gbs  usbkitv1-B_Paste.gbp  usbkitv1-B_Silkscreen.gbo  usbkitv1-Edge_Cuts.gm1  usbkitv1-F_Cu.gtl  usbkitv1-F_Mask.gts  usbkitv1-F_Paste.gtp  usbkitv1-F_Silkscreen.gto  usbkitv1-NPTH.drl  usbkitv1-PTH.drl  usbkitv1-job.gbrjob
tools/: env_helpers.ps1  env_helpers.sh  setup_venv.ps1  setup_venv.sh
tools/web/: .gitignore  README.md  package-lock.json  package.json  server.py  tailwind.config.js
tools/web/pages/: arm_architecture.html  arm_cortex_m33.html  debug_jtag.html  debug_swd.html  (+21 more)
(+93 files in other folders)
